# nnLandmark

./: pyproject.toml  readme.md
documentation/competitions/Toothfairy2/: inference_script_semseg_only_customInf2.py
nnlandmark/: configuration.py  paths.py
nnlandmark/batch_running/: collect_results_custom_Decathlon.py  collect_results_custom_Decathlon_2d.py  kaggle2025_byu_collect_results.py
nnlandmark/batch_running/benchmarking/: generate_benchmarking_commands.py  summarize_benchmark_results.py
nnlandmark/dataset_conversion/: Dataset015_018_RibFrac_RibSeg.py  Dataset021_CTAAorta.py  Dataset023_AbdomenAtlas1_1Mini.py  Dataset027_ACDC.py  Dataset042_BraTS18.py  Dataset043_BraTS19.py  Dataset073_Fluo_C3DH_A549_SIM.py  Dataset114_MNMs.py  Dataset115_EMIDEC.py  Dataset120_RoadSegmentation.py  Dataset137_BraTS21.py  Dataset218_Amos2022_task1.py  Dataset219_Amos2022_task2.py  Dataset220_KiTS2023.py  Dataset221_AutoPETII_2023.py  Dataset223_AMOS2022postChallenge.py  Dataset224_AbdomenAtlas1.0.py  Dataset226_BraTS2024-BraTS-GLI.py  Dataset227_TotalSegmentatorMRI.py  Dataset704_afids.py  Dataset737_convert_to_spheres.py  Dataset987_dummyDataset4.py  Dataset989_dummyDataset4_2.py  convert_MSD_dataset.py  convert_raw_dataset_from_old_nnunet_format.py
nnlandmark/dataset_conversion/datasets_for_integration_tests/: Dataset996_IntegrationTest_Hippocampus_regions_ignore.py  Dataset997_IntegrationTest_Hippocampus_regions.py  Dataset998_IntegrationTest_Hippocampus_ignore.py  Dataset999_IntegrationTest_Hippocampus.py
nnlandmark/dataset_conversion/kaggle_byu/: merge_datasets.py  official_data_to_nnunet.py  sanitize_coords.py
nnlandmark/ensembling/: ensemble.py
nnlandmark/evaluation/: accumulate_cv_results.py  evaluate_predictions.py  find_best_configuration.py
nnlandmark/evaluation/nnLandmark/: evaluate_feta_measurements.py  evaluate_landmark_predictions.py  evaluate_prediction_world_coords.py  filter_feta21_for_cerebellum.py  filter_feta21_name2label.py
nnlandmark/experiment_planning/: plan_and_preprocess_api.py  plan_and_preprocess_entrypoints.py  verify_dataset_integrity.py
nnlandmark/experiment_planning/dataset_fingerprint/: fingerprint_extractor.py
nnlandmark/experiment_planning/experiment_planners/: default_experiment_planner.py  resencUNet_planner.py
nnlandmark/experiment_planning/plans_for_pretraining/: move_plans_between_datasets.py
nnlandmark/imageio/: natural_image_reader_writer.py  nibabel_reader_writer.py  reader_writer_registry.py  simpleitk_reader_writer.py  tif_reader_writer.py
nnlandmark/inference/: export_prediction.py  predict_from_raw_data.py
nnlandmark/inference/kaggle2025_byu/: deprecated_simple_inference.py  inference.py
nnlandmark/inference/nnLandmark/: JHU_inference.py  (+6 more)
nnlandmark/model_sharing/: entry_points.py  model_download.py  model_export.py  model_import.py
nnlandmark/postprocessing/: remove_connected_components.py
nnlandmark/run/: run_training.py
nnlandmark/utilities/: dataset_name_id_conversion.py  file_path_utilities.py  get_network_from_plans.py  overlay_plots.py  utils.py
nnunetv2/dataset_conversion/: Dataset704_afids.py  Dataset737_convert_to_spheres.py  generate_dataset_json.py
nnunetv2/inference/: predict_from_raw_data.py
(+174 files in other folders)
