[project]
name = "nnlandmark"
version = "0.2.0"
requires-python = ">=3.10"
description = "nnLandmark is a self-configuring framerwork for 3D medical landmark detection. It is a fork of nnU-Net 2.6.2."
readme = "readme.md"
license = { file = "LICENSE" }
authors = [
    { name = "Alexandra Ertl", email = "alexandra.ertl@dkfz-heidelberg.de"},
    { name = "Division of Medical Image Computing, German Cancer Research Center (DKFZ), Heidelberg, Germany" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
keywords = [
    'deep learning',
    'landmark detection',
    'landmark localisation',
    'medical image analysis',
    'medical landmark detection',
    'nnU-Net',
    'nnunet',
    'nnLandmark',
    'nnlandmark'
]
dependencies = [
    "torch==2.8.0",
    "torchvision==0.23.0",
    "acvl-utils>=0.2.3,<0.3",  # 0.3 may bring breaking changes. Careful!
    "dynamic-network-architectures>=0.4.1,<0.5",
    "tqdm",
    "scipy",
    "batchgenerators>=0.25.1",
    "numpy>=1.24",
    "scikit-learn",
    "scikit-image>=0.19.3",
    "SimpleITK>=2.2.1",
    "pandas",
    "graphviz",
    'tifffile',
    'requests',
    "nibabel",
    "matplotlib",
    "seaborn",
    "imagecodecs",
    "yacs",
    "batchgeneratorsv2>=0.3.0",
    "einops",
    "blosc2>=3.0.0b1",
    "cryoet_data_portal",
    "edt",
    "connected-components-3d",
    "Pillow",
    "ndindex",
    "threadpoolctl",
    "fairscale",
    "ml_collections",
    "torchinfo"
]

[project.urls]
homepage = "https://github.com/MIC-DKFZ/nnLandmark"
repository = "https://github.com/MIC-DKFZ/nnLandmark"

[project.scripts]
nnLM_plan_and_preprocess = "nnlandmark.experiment_planning.plan_and_preprocess_entrypoints:plan_and_preprocess_entry"
nnLM_extract_fingerprint = "nnlandmark.experiment_planning.plan_and_preprocess_entrypoints:extract_fingerprint_entry"
nnLM_plan_experiment = "nnlandmark.experiment_planning.plan_and_preprocess_entrypoints:plan_experiment_entry"
nnLM_preprocess = "nnlandmark.experiment_planning.plan_and_preprocess_entrypoints:preprocess_entry"
nnLM_train = "nnlandmark.run.run_training:run_training_entry"

nnLM_predict = "nnlandmark.inference.nnLandmark.predict_from_raw_data:predict_entry_point"
nnLM_evaluate = "nnlandmark.evaluation.nnLandmark.evaluate_landmark_predictions:evaluate_entry_point"
nnLM_biometry = "nnlandmark.evaluation.nnLandmark.evaluate_feta_measurements:biometry_entry_point"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "pre-commit"
]

[tool.setuptools.packages.find]
include = ["nnlandmark*"]

[build-system]
requires = ["setuptools>=67.8.0"]
build-backend = "setuptools.build_meta"

[tool.codespell]
skip = '.git,*.pdf,*.svg'
#
# ignore-words-list = ''
